# terminal-pane-launcher-tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  软件Mac一键启动Tauri版.command  软件Mac环境检查安装脚本.command  软件Windows一键启动Tauri版.bat  软件Windows环境检查安装脚本.bat
config/: layout.json
docs/: prompt-import-format.md  query-public-repo-import-format.md
docs/plans/: 2026-05-09-workspace-tabs-query-resume-design.md
scripts/: check-env.ps1  check-env.sh  env.mjs  start-tauri-windows.ps1
src/: App.vue  backend.ts  defaults.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
templates/: codex的模板.md  prompt-file-instruction.txt  全栈的提示词留档.md  提示词导入示例.md  跨平台提示词留档.md
