[package]
name = "terminal-pane-launcher-tauri"
version = "0.1.0"
description = "Cross-platform GUI shell for the Windows Terminal pane launcher"
authors = ["Terminal Pane Launcher"]
edition = "2021"

[lib]
name = "terminal_pane_launcher_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSPasteboard"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSString"] }
